--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,62 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start" menuId="main" contentId="main" swipeGesture="false" type="overlay">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Opciones</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item detail (click)="openLink('https://www.carlitoxenlaweb.com')">
+          <ion-icon name="book-outline" slot="start"></ion-icon>
+          <label>
+            Visitar Blog
+          </label>
+        </ion-item>
+        <ion-item detail (click)="goTo('/home')">
+          <ion-icon name="trail-sign-outline" slot="start"></ion-icon>
+          <label>
+            ¿Como te sientes hoy?
+          </label>
+        </ion-item>
+        <ion-item detail (click)="goTo('/page-services')">
+          <ion-icon name="extension-puzzle-outline" slot="start"></ion-icon>
+          <label>
+            Servicios
+          </label>
+        </ion-item>
+        <ion-item detail (click)="goTo('/credits')">
+          <ion-icon name="cash-outline" slot="start"></ion-icon>
+          <label>
+            Créditos
+          </label>
+        </ion-item>
+        <ion-item detail (click)="goTo('/horoscope')">
+          <ion-icon name="star-half-outline" slot="start"></ion-icon>
+          <label>
+            Horoscopo
+          </label>
+        </ion-item>
+        <ion-item detail (click)="goTo('/profile')">
+          <ion-icon name="person-outline" slot="start"></ion-icon>
+          <label>
+            Perfil
+          </label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+    <ion-footer collapse="fade">
+      <ion-toolbar>
+        <ion-list>
+          <ion-item button (click)="logout()">
+            <ion-icon name="log-out-outline" slot="start"></ion-icon>
+            <label>
+              Salir
+            </label>
+          </ion-item>
+        </ion-list>
+      </ion-toolbar>
+    </ion-footer>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
