--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,67 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>APAPACHO</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <div *ngIf="isLoading" class="ion-text-center ion margin ion-padding">
+    <ion-spinner name="dots"></ion-spinner>
+  </div>
+  <div *ngIf="!isLoading" [@slideInOut]>
+    <h1 class="ion-text-center ion-padding">¿Como te sientes hoy?</h1>
+    <ion-card class="ion-padding-top">
+      <ion-card-content>
+        <div class="ion-text-center" *ngIf="currentState != 'unset'" [@fadeIn]>
+          <img class="ion-margin ion-padding" [src]="currentImage" />
+          <ion-button expand="block" (click)="resetState()">Cambiar / Actualizar</ion-button>
+        </div>
+        <div *ngIf="currentState == 'unset'" [@fadeIn]>
+          <ion-list>
+            <ion-item button (click)="changeState('happy')">
+              <ion-label>Felíz</ion-label>
+            </ion-item>
+            <ion-item button (click)="changeState('neutral')">
+              <ion-label>Neutral</ion-label>
+            </ion-item>
+            <ion-item button (click)="changeState('sad')">
+              <ion-label>Triste</ion-label>
+            </ion-item>
+            <ion-item button (click)="changeState('love')">
+              <ion-label>Enamorado</ion-label>
+            </ion-item>
+            <ion-item button (click)="changeState('anxious')">
+              <ion-label>Ansioso</ion-label>
+            </ion-item>
+            <ion-item button (click)="changeState('optimistic')">
+              <ion-label>Optimista</ion-label>
+            </ion-item>
+            <ion-item button (click)="changeState('pessimistic')">
+              <ion-label>Pesimista</ion-label>
+            </ion-item>
+            <ion-item button (click)="changeState('frustrated')">
+              <ion-label>Frustrado</ion-label>
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-card-content>
+    </ion-card>
+    <ion-card *ngIf="currentState != 'unset'" [@fadeIn]>
+      <ion-card-header>
+        <ion-card-subtitle>En base a tu estado de animo</ion-card-subtitle>
+        <ion-card-title>Algunas sugerencias...</ion-card-title>
+      </ion-card-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+      <ion-card-content>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed mattis sapien, sed tincidunt mi. In
+          pulvinar aliquam est, ut volutpat velit iaculis at.</p>
+        <p>Nam dignissim nunc urna, a venenatis nunc venenatis sagittis. Integer euismod dui ex, eget ultricies velit
+          condimentum non. In sed lorem purus. Cras tempus ac magna pellentesque porta. Pellentesque volutpat volutpat
+          nisi et aliquam. Aenean quis vulputate leo. Mauris dapibus tellus in magna cursus, et pulvinar lacus posuere.
+        </p>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
