--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-item detail (click)="openLink('https://www.carlitoxenlaweb.com')">
+        <ion-item detail (click)="openLink('https://apapachoamigo.com/')">
           <ion-icon name="book-outline" slot="start"></ion-icon>
           <label>
             Visitar Blog
@@ -19,7 +19,7 @@
             ¿Como te sientes hoy?
           </label>
         </ion-item>
-        <ion-item detail (click)="goTo('/page-services')">
+        <ion-item detail (click)="goTo('/services-page')">
           <ion-icon name="extension-puzzle-outline" slot="start"></ion-icon>
           <label>
             Servicios
@@ -34,7 +34,7 @@
         <ion-item detail (click)="goTo('/horoscope')">
           <ion-icon name="star-half-outline" slot="start"></ion-icon>
           <label>
-            Horoscopo
+            Horóscopo
           </label>
         </ion-item>
         <ion-item detail (click)="goTo('/profile')">
