--- a/src/app/horoscope/horoscope.page.html
+++ b/src/app/horoscope/horoscope.page.html
@@ -1,9 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>horoscope</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Horóscopo</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <p>No he podido conseguir un API en español, solo hay en ingles y no muy completas</p>
 </ion-content>
