--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -35,6 +35,12 @@
           </ion-text>
         </ion-col>
       </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-center">
+          <img class="lang-icon" src="/assets/icon/favicon.png">&nbsp;
+          <img class="lang-icon" src="/assets/icon/favicon.png">
+        </ion-col>
+      </ion-row>
     </div>
   </div>
 </ion-content>
