--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -2,6 +2,10 @@ ion-content {
     --background: var(--ion-color-secondary);
 }
 
+img.lang-icon {
+    width: 2.5rem;
+}
+
 img {
     width: 50%;
     height: auto;
