--- a/src/app/credits/credits.page.html
+++ b/src/app/credits/credits.page.html
@@ -1,9 +1,34 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>credits</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Créditos</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+  <ion-card class="ion-padding-top">
+    <ion-card-content class="ion-text-center">
+      <div *ngIf="isLoading">
+        <ion-spinner name="dots"></ion-spinner>
+      </div>
+      <div *ngIf="!isLoading">
+        <h1>N</h1>
+        <h4>Créditos Disponibles</h4>
+      </div>
+    </ion-card-content>
+  </ion-card>
+  <ion-card class="ion-padding-top">
+    <ion-card-header>
+      <ion-card-title>Algunas sugerencias</ion-card-title>
+    </ion-card-header>
+    <ion-card-content class="ion-text-center">
+      Aqui el listado de sugerencias......
+    </ion-card-content>
+  </ion-card>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="goTo('/credits-add')">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
