--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -37,6 +37,14 @@
               <ion-label>Acepto los términos y condiciones</ion-label>
               <ion-checkbox slot="end" formControlName="tos"></ion-checkbox>
             </ion-item>
+            <ion-item>
+              <ion-label position="floating">Fecha de Nacimiento</ion-label>
+              <ion-input type="date" formControlName="birthday"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Hora de Nacimiento</ion-label>
+              <ion-input type="time" formControlName="birthday_hour"></ion-input>
+            </ion-item>
           </ion-col>
         </ion-row>
         <ion-row>
