--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -3,41 +3,30 @@
     <ng-template swiperSlide>
       <div class="slide">
         <img src="/assets/slide-1.png" />
-        <h2>Bienvenido</h2>
-        <p>
-          Texto para <b>APAPACHO APP</b> de prueba, sera reemplazado por contenido especifico al finalizar el
-          diseño en su totalidad, solo a modo de prueba.
-        </p>
+        <h2>{{ 'intro.page1.title' | translate }}</h2>
+        <p>{{ 'intro.page1.text' | translate }}</p>
       </div>
     </ng-template>
-
     <ng-template swiperSlide>
       <div class="slide">
         <img src="/assets/slide-2.png" />
-        <h2>UN TITULO</h2>
-        <p>
-          Texto para <b>APAPACHO APP</b> de prueba, sera reemplazado por contenido especifico al finalizar el
-          diseño en su totalidad, solo a modo de prueba.
-        </p>
+        <h2>{{ 'intro.page2.title' | translate }}</h2>
+        <p>{{ 'intro.page2.text' | translate }}</p>
       </div>
     </ng-template>
-
     <ng-template swiperSlide>
       <div class="slide">
         <img src="/assets/slide-3.png" />
-        <h2>OTRO TITULO</h2>
-        <p>
-          Texto para <b>APAPACHO APP</b> de prueba, sera reemplazado por contenido especifico al finalizar el
-          diseño en su totalidad, solo a modo de prueba.
-        </p>
+        <h2>{{ 'intro.page3.title' | translate }}</h2>
+        <p>{{ 'intro.page3.text' | translate }}</p>
       </div>
     </ng-template>
-
     <ng-template swiperSlide>
       <div class="slide">
         <img src="/assets/slide-4.png" />
-        <h2>¿Comenzamos?</h2>
-        <ion-button fill="clear" (click)="goTo('login')">Adelante <ion-icon slot="end" name="arrow-forward"></ion-icon>
+        <h2>{{ 'intro.page4.title' | translate }}</h2>
+        <ion-button fill="clear" (click)="goTo('login')">
+          {{ 'intro.page4.text' | translate }} <ion-icon slot="end" name="arrow-forward"></ion-icon>
         </ion-button>
       </div>
     </ng-template>
