--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -33,11 +33,11 @@
               <ion-input type="email" formControlName="email"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="floating">Fecha de Nacimiento</ion-label>
+              <ion-label position="stacked">Fecha de Nacimiento</ion-label>
               <ion-input type="date" formControlName="birthday"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="floating">Hora de Nacimiento</ion-label>
+              <ion-label position="stacked">Hora de Nacimiento</ion-label>
               <ion-input type="time" formControlName="birthday_hour"></ion-input>
             </ion-item>
           </ion-col>
