--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -38,11 +38,11 @@
               <ion-checkbox slot="end" formControlName="tos"></ion-checkbox>
             </ion-item>
             <ion-item>
-              <ion-label position="floating">Fecha de Nacimiento</ion-label>
+              <ion-label position="stacked">Fecha de Nacimiento</ion-label>
               <ion-input type="date" formControlName="birthday"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="floating">Hora de Nacimiento</ion-label>
+              <ion-label position="stacked">Hora de Nacimiento</ion-label>
               <ion-input type="time" formControlName="birthday_hour"></ion-input>
             </ion-item>
           </ion-col>
