--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,7 +11,7 @@
           <ion-col>
             <ion-list>
               <ion-item>
-                <ion-label position="floating">Usuario</ion-label>
+                <ion-label position="floating">{{ 'login.username_input' | translate }}</ion-label>
                 <ion-input formControlName="username"></ion-input>
               </ion-item>
               <ion-item>
