--- a/src/app/splash/splash.page.html
+++ b/src/app/splash/splash.page.html
@@ -1,5 +1,5 @@
 <ion-content fullscreen class="ion-padding" scroll-y="false">
-  <svg id="bars" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 63.15 224.35">
+  <!-- <svg id="bars" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 63.15 224.35">
     <defs>
       <style>
         .cls-1 {
@@ -24,8 +24,9 @@
     <rect class="cls-2" y="4" width="20.06" height="163.78" />
     <rect class="cls-3" x="13.9" y="13.1" width="20.06" height="163.78" />
     <rect class="cls-4" x="43.1" y="7.45" width="20.06" height="163.78" />
-  </svg>
+  </svg> -->
+  <img src="/assets/logo.svg" alt="">
   <h1 class="cls-5">
-    Mensaje de Carga<br/><small>Algo como ¡listos para ayudar!</small>
+    <ion-spinner name="dots"></ion-spinner>
   </h1>
 </ion-content>
