--- a/src/app/splash/splash.page.scss
+++ b/src/app/splash/splash.page.scss
@@ -5,7 +5,7 @@ ion-content {
     text-align: center;
 }
 
-#bars {
+/* #bars {
     height: 80%;
 
     .cls-1 {
@@ -42,4 +42,4 @@ ion-content {
         opacity: 1;
         transform: rotate3d(1, 1, 0, 0deg);
     }
-}
+} */
