--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -15,7 +15,7 @@
                 <ion-input formControlName="username"></ion-input>
               </ion-item>
               <ion-item>
-                <ion-label position="floating">Contraseña</ion-label>
+                <ion-label position="floating">{{ 'login.password_input' | translate }}</ion-label>
                 <ion-input type="password" formControlName="password"></ion-input>
               </ion-item>
             </ion-list>
