--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -13,6 +13,10 @@
         <ion-row>
           <ion-col>
             <ion-item>
+              <ion-label position="floating">Alias</ion-label>
+              <ion-input formControlName="alias"></ion-input>
+            </ion-item>
+            <ion-item>
               <ion-label position="floating">Nombre</ion-label>
               <ion-input formControlName="firstname"></ion-input>
             </ion-item>
