--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -23,15 +23,15 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-button type="submit" color="primary" expand="block">Entrar</ion-button>
+            <ion-button type="submit" color="primary" expand="block">{{ 'login.login_button' | translate }}</ion-button>
           </ion-col>
         </ion-row>
       </form>
       <ion-row>
         <ion-col class="ion-text-center">
-          <ion-button color="tertiary" expand="block" fill="outline" (click)="goTo('register')">Registrarse</ion-button>
+          <ion-button color="tertiary" expand="block" fill="outline" (click)="goTo('register')">{{ 'login.register_button' | translate }}</ion-button>
           <ion-text color="tertiary">
-            <p (click)="goTo('reset-password')">¿Olvidaste tu contraseña?</p>
+            <p (click)="goTo('reset-password')">{{ 'login.forgot_button' | translate }}</p>
           </ion-text>
         </ion-col>
       </ion-row>
