--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-row class="ion-text-center">
     <ion-col>
-      <h4>Crear Cuenta</h4>
+      <h4>{{ 'register.title' | translate }}</h4>
     </ion-col>
   </ion-row>
   <ion-card [@slideInOut]>
@@ -10,47 +10,51 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Nombre</ion-label>
+              <ion-label position="floating">{{ 'profile.alias' | translate }}</ion-label>
+              <ion-input formControlName="alias"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">{{ 'profile.firstname' | translate }}</ion-label>
               <ion-input formControlName="firstname"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="floating">Apellido</ion-label>
+              <ion-label position="floating">{{ 'profile.lastname' | translate }}</ion-label>
               <ion-input formControlName="lastname"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="floating">Teléfono</ion-label>
-              <ion-input type="tel" formControlName="phone"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="floating">Dirección</ion-label>
-              <ion-input formControlName="address"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="floating">Correo</ion-label>
-              <ion-input type="email" formControlName="email"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="floating">Contraseña</ion-label>
-              <ion-input type="password" formControlName="password"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label>Acepto los términos y condiciones</ion-label>
-              <ion-checkbox slot="end" formControlName="tos"></ion-checkbox>
-            </ion-item>
-            <ion-item>
-              <ion-label position="stacked">Fecha de Nacimiento</ion-label>
+              <ion-label position="stacked">{{ 'profile.birthday' | translate }}</ion-label>
               <ion-input type="date" formControlName="birthday"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="stacked">Hora de Nacimiento</ion-label>
+              <ion-label position="stacked">{{ 'profile.birthday_hour' | translate }}</ion-label>
               <ion-input type="time" formControlName="birthday_hour"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">{{ 'profile.phone' | translate }}</ion-label>
+              <ion-input type="tel" formControlName="phone"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">{{ 'profile.address' | translate }}</ion-label>
+              <ion-input formControlName="address"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">{{ 'profile.email' | translate }}</ion-label>
+              <ion-input type="email" formControlName="email"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">{{ 'profile.password' | translate }}</ion-label>
+              <ion-input type="password" formControlName="password"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label>{{ 'register.accept_tos' | translate }}</ion-label>
+              <ion-checkbox slot="end" formControlName="tos"></ion-checkbox>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-text-center">
-            <ion-button type="submit" color="primary" expand="block">Crear Cuenta</ion-button>
-            <p (click)="openToS()">Ver términos y condiciones</p>
+            <ion-button type="submit" color="primary" expand="block">{{ 'register.create_button' | translate }}</ion-button>
+            <p (click)="openToS()">{{ 'register.text_tos' | translate }}</p>
           </ion-col>
         </ion-row>
       </form>
@@ -58,7 +62,7 @@
   </ion-card>
   <ion-row *ngIf="currentForm != 'none'" class="animate__animated animate__fadeIn">
     <ion-col>
-      <ion-button color="primary" expand="block" fill="outline" (click)="goTo('login')">Volver</ion-button>
+      <ion-button color="primary" expand="block" fill="outline" (click)="goTo('login')">{{ 'general.back' | translate }}</ion-button>
     </ion-col>
   </ion-row>
 </ion-content>
