--- a/src/app/splash/splash.page.html
+++ b/src/app/splash/splash.page.html
@@ -27,6 +27,7 @@
   </svg> -->
   <img src="/assets/logo.svg" alt="">
   <h1 class="cls-5">
-    <ion-spinner name="dots"></ion-spinner>
+    <ion-spinner name="dots"></ion-spinner><br/>
+    <small>Bienvenido a Apapacho<br/>tu amigo en las buenas y en las malas</small>
   </h1>
 </ion-content>
